Refactorizado método con complejidad ciclomática alta