@@ -7,14 +7,13 @@ import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
 import es.ubu.reservapp.exception.UserNotFoundException;
-import es.ubu.reservapp.model.entities.Convocatoria;
 import es.ubu.reservapp.model.entities.Convocado;
 import es.ubu.reservapp.model.entities.ConvocadoPK;
+import es.ubu.reservapp.model.entities.Convocatoria;
 import es.ubu.reservapp.model.entities.Establecimiento;
 import es.ubu.reservapp.model.entities.FranjaHoraria;
 import es.ubu.reservapp.model.entities.Reserva;
@@ -181,8 +180,7 @@ public class ReservaServiceImpl implements ReservaService {
 	    // Procesar cada franja horaria del establecimiento
 	    for (FranjaHoraria franja : establecimiento.getFranjasHorarias()) {
 	        if (franja.getDiaSemana().equals(fecha.getDayOfWeek())) {
-	            List<PeriodoDisponible> periodosDisponibles = calcularPeriodosDisponibles(
-	                franja, reservasDelDia, establecimiento.getAforo());
+	            List<PeriodoDisponible> periodosDisponibles = calcularPeriodosDisponibles(franja, reservasDelDia, establecimiento.getAforo());
 	            franjasDisponibles.add(new FranjaDisponibilidad(franja, periodosDisponibles));
 	        }
 	    }
@@ -199,74 +197,153 @@ public class ReservaServiceImpl implements ReservaService {
 	}
 
 	/**
-	 * Calcula los períodos disponibles dentro de una franja horaria considerando las reservas existentes y el aforo.
+	 * Calcula los períodos disponibles dentro de una franja horaria considerando
+	 * las reservas existentes y el aforo. Si el aforo es ilimitado, devuelve toda
+	 * la franja como disponible.
+	 * 
+	 * @param franja         franja horaria a evaluar
+	 * @param reservasDelDia reservas del día que se están considerando
+	 * @param aforo          aforo del establecimiento
+	 * @return lista de períodos disponibles dentro de la franja
 	 */
 	private List<PeriodoDisponible> calcularPeriodosDisponibles(FranjaHoraria franja, List<Reserva> reservasDelDia, Integer aforo) {
-	    List<PeriodoDisponible> periodosDisponibles = new ArrayList<>();
-	    
-	    // Si no hay límite de aforo, toda la franja está disponible
-	    if (aforo == null || aforo <= 0) {
-	        periodosDisponibles.add(new PeriodoDisponible(franja.getHoraInicio(), franja.getHoraFin()));
-	        return periodosDisponibles;
+	    if (esAforoIlimitado(aforo)) {
+	        return List.of(new PeriodoDisponible(franja.getHoraInicio(), franja.getHoraFin()));
 	    }
 	    
-	    // Filtrar reservas que afectan a esta franja horaria
-	    List<Reserva> reservasEnFranja = reservasDelDia.stream()
-	        .filter(r -> {
-	            LocalTime horaInicioReserva = r.getFechaReserva().toLocalTime();
-	            LocalTime horaFinReserva = r.getHoraFin() != null ? r.getHoraFin() : horaInicioReserva.plusHours(1);
-	            
-	            // Verificar si la reserva se solapa con la franja
-	            return !(horaFinReserva.isBefore(franja.getHoraInicio()) || 
-	                    horaInicioReserva.isAfter(franja.getHoraFin()));
-	        }).toList();
+	    List<Reserva> reservasEnFranja = filtrarReservasEnFranja(reservasDelDia, franja);
 	    
-	    // Si no hay reservas en la franja, toda está disponible
 	    if (reservasEnFranja.isEmpty()) {
-	        periodosDisponibles.add(new PeriodoDisponible(franja.getHoraInicio(), franja.getHoraFin()));
-	        return periodosDisponibles;
+	        return List.of(new PeriodoDisponible(franja.getHoraInicio(), franja.getHoraFin()));
 	    }
 	    
-	    // Crear una lista de todos los puntos de tiempo relevantes
+	    List<LocalTime> puntosDeTime = obtenerPuntosDeTiempoOrdenados(franja, reservasEnFranja);
+	    
+	    return calcularPeriodosEntreIntervalos(puntosDeTime, reservasEnFranja, aforo);
+	}
+
+	/**
+	 * Verifica si el aforo es ilimitado (nulo o menor/igual a 0).
+	 * 
+	 * @param aforo el aforo a verificar
+	 * @return true si el aforo es ilimitado, false en caso contrario
+	 */
+	private boolean esAforoIlimitado(Integer aforo) {
+	    return aforo == null || aforo <= 0;
+	}
+
+	/**
+	 * Filtra las reservas que se solapan con la franja horaria especificada.
+	 * 
+	 * @param reservasDelDia reservas del día que se están considerando
+	 * @param franja         franja horaria a filtrar
+	 * @return lista de reservas que se solapan con la franja
+	 */
+	private List<Reserva> filtrarReservasEnFranja(List<Reserva> reservasDelDia, FranjaHoraria franja) {
+	    return reservasDelDia.stream()
+	        .filter(reserva -> sesolapaConFranja(reserva, franja))
+	        .toList();
+	}
+
+	/**
+	 * Verifica si una reserva se solapa con una franja horaria.
+	 * 
+	 * @param reserva la reserva a verificar
+	 * @param franja  la franja horaria a comparar
+	 * @return true si la reserva se solapa con la franja, false en caso contrario
+	 */
+	private boolean sesolapaConFranja(Reserva reserva, FranjaHoraria franja) {
+	    LocalTime horaInicioReserva = reserva.getFechaReserva().toLocalTime();
+	    LocalTime horaFinReserva = obtenerHoraFinReserva(reserva);
+	    
+	    return !(horaFinReserva.isBefore(franja.getHoraInicio()) || 
+	            horaInicioReserva.isAfter(franja.getHoraFin()));
+	}
+
+	/**
+	 * Obtiene la hora de fin de una reserva, usando hora por defecto si no está
+	 * especificada.
+	 * 
+	 * @param reserva la reserva de la cual obtener la hora de fin
+	 * @return la hora de fin de la reserva, o una hora por defecto (1 hora después
+	 *         de la hora de inicio) si no está especificada
+	 */
+	private LocalTime obtenerHoraFinReserva(Reserva reserva) {
+	    return reserva.getHoraFin() != null ? 
+	           reserva.getHoraFin() : 
+	           reserva.getFechaReserva().toLocalTime().plusHours(1);
+	}
+
+	/**
+	 * Obtiene todos los puntos de tiempo relevantes (inicio/fin de franja y
+	 * reservas) ordenados.
+	 * 
+	 * @param franja           la franja horaria a evaluar
+	 * @param reservasEnFranja las reservas que se solapan con la franja
+	 * @return lista de puntos de tiempo ordenados
+	 */
+	private List<LocalTime> obtenerPuntosDeTiempoOrdenados(FranjaHoraria franja, List<Reserva> reservasEnFranja) {
 	    List<LocalTime> puntosDeTime = new ArrayList<>();
 	    puntosDeTime.add(franja.getHoraInicio());
 	    puntosDeTime.add(franja.getHoraFin());
 	    
-	    for (Reserva reserva : reservasEnFranja) {
+	    reservasEnFranja.forEach(reserva -> {
 	        LocalTime horaInicioReserva = reserva.getFechaReserva().toLocalTime();
-	        LocalTime horaFinReserva = reserva.getHoraFin() != null ? reserva.getHoraFin() : horaInicioReserva.plusHours(1);
+	        LocalTime horaFinReserva = obtenerHoraFinReserva(reserva);
 	        
-	        if (!horaInicioReserva.isBefore(franja.getHoraInicio()) && !horaInicioReserva.isAfter(franja.getHoraFin())) {
-	            puntosDeTime.add(horaInicioReserva);
-	        }
-	        if (!horaFinReserva.isBefore(franja.getHoraInicio()) && !horaFinReserva.isAfter(franja.getHoraFin())) {
-	            puntosDeTime.add(horaFinReserva);
-	        }
-	    }
+	        agregarPuntoSiEstaEnFranja(puntosDeTime, horaInicioReserva, franja);
+	        agregarPuntoSiEstaEnFranja(puntosDeTime, horaFinReserva, franja);
+	    });
 	    
-	    // Ordenar y eliminar duplicados
-	    puntosDeTime = puntosDeTime.stream()
+	    return puntosDeTime.stream()
 	        .distinct()
 	        .sorted()
-	        .collect(Collectors.toList());
+	        .toList();
+	}
+
+	/**
+	 * Agrega un punto de tiempo a la lista si está dentro de la franja horaria.
+	 * 
+	 * @param puntosDeTime la lista de puntos de tiempo
+	 * @param punto        el punto de tiempo a agregar
+	 * @param franja       la franja horaria a verificar
+	 */
+	private void agregarPuntoSiEstaEnFranja(List<LocalTime> puntosDeTime, LocalTime punto, FranjaHoraria franja) {
+	    if (estaEntreFranja(punto, franja)) {
+	        puntosDeTime.add(punto);
+	    }
+	}
+
+	/**
+	 * Verifica si un punto de tiempo está dentro de la franja horaria.
+	 * 
+	 * @param punto  el punto de tiempo a verificar
+	 * @param franja la franja horaria a comparar
+	 * @return true si el punto está dentro de la franja, false en caso contrario
+	 */
+	private boolean estaEntreFranja(LocalTime punto, FranjaHoraria franja) {
+	    return !punto.isBefore(franja.getHoraInicio()) && !punto.isAfter(franja.getHoraFin());
+	}
+
+	/**
+	 * Calcula los períodos disponibles entre puntos de tiempo consecutivos. Si el
+	 * número de reservas en un intervalo es menor que el aforo, se considera
+	 * disponible.
+	 * 
+	 * @param puntosDeTime     lista de puntos de tiempo ordenados
+	 * @param reservasEnFranja reservas que se solapan con la franja
+	 * @param aforo            aforo del establecimiento
+	 * @return lista de períodos disponibles
+	 */
+	private List<PeriodoDisponible> calcularPeriodosEntreIntervalos(List<LocalTime> puntosDeTime, List<Reserva> reservasEnFranja, Integer aforo) {
+	    List<PeriodoDisponible> periodosDisponibles = new ArrayList<>();
 	    
-	    // Verificar cada intervalo entre puntos consecutivos
 	    for (int i = 0; i < puntosDeTime.size() - 1; i++) {
 	        LocalTime inicioIntervalo = puntosDeTime.get(i);
 	        LocalTime finIntervalo = puntosDeTime.get(i + 1);
 	        
-	        // Contar cuántas reservas ocupan este intervalo
-	        long reservasEnIntervalo = reservasEnFranja.stream()
-	            .filter(r -> {
-	                LocalTime horaInicioReserva = r.getFechaReserva().toLocalTime();
-	                LocalTime horaFinReserva = r.getHoraFin() != null ? r.getHoraFin() : horaInicioReserva.plusHours(1);
-	                
-	                // La reserva ocupa el intervalo si se solapa con él
-	                return !(horaFinReserva.isBefore(inicioIntervalo) || horaInicioReserva.isAfter(finIntervalo));
-	            })
-	            .count();
+	        long reservasEnIntervalo = contarReservasEnIntervalo(reservasEnFranja, inicioIntervalo, finIntervalo);
 	        
-	        // Si hay capacidad disponible, agregar el período
 	        if (reservasEnIntervalo < aforo) {
 	            periodosDisponibles.add(new PeriodoDisponible(inicioIntervalo, finIntervalo));
 	        }
@@ -276,9 +353,41 @@ public class ReservaServiceImpl implements ReservaService {
 	}
 
 	/**
-	 * Recupera las convocatorias de las reserva
+	 * Cuenta cuántas reservas ocupan un intervalo de tiempo específico.
+	 * 
+	 * @param reservasEnFranja lista de reservas que se solapan con la franja
+	 * @param inicioIntervalo  hora de inicio del intervalo
+	 * @param finIntervalo     hora de fin del intervalo
+	 * @return el número de reservas que ocupan el intervalo
+	 */
+	private long contarReservasEnIntervalo(List<Reserva> reservasEnFranja, LocalTime inicioIntervalo, LocalTime finIntervalo) {
+	    return reservasEnFranja.stream()
+	        .filter(reserva -> reservaOcupaIntervalo(reserva, inicioIntervalo, finIntervalo))
+	        .count();
+	}
+
+	/**
+	 * Verifica si una reserva ocupa un intervalo de tiempo específico.
+	 * 
+	 * @param reserva         la reserva a verificar
+	 * @param inicioIntervalo hora de inicio del intervalo
+	 * @param finIntervalo    hora de fin del intervalo
+	 * @return true si la reserva ocupa el intervalo, false en caso contrario
+	 */
+	private boolean reservaOcupaIntervalo(Reserva reserva, LocalTime inicioIntervalo, LocalTime finIntervalo) {
+	    LocalTime horaInicioReserva = reserva.getFechaReserva().toLocalTime();
+	    LocalTime horaFinReserva = obtenerHoraFinReserva(reserva);
+	    
+	    return !(horaFinReserva.isBefore(inicioIntervalo) || horaInicioReserva.isAfter(finIntervalo));
+	}
+
+	/**
+	 * Recupera las convocatorias de las reserva. Este método se asegura de que cada
+	 * reserva tenga su convocatoria cargada, y que cada convocado tenga su usuario
+	 * cargado.
 	 * 
 	 * @param reservas
+	 * @return lista de reservas con sus convocatorias cargadas
 	 */
 	private List<Reserva> obtenerConvocatorias(List<Reserva> reservas) {
 		for (Reserva reserva : reservas) {
@@ -287,8 +396,15 @@ public class ReservaServiceImpl implements ReservaService {
 		return reservas;
 	}
 
+	/**
+	 * Recupera la convocatoria de una reserva. Si la reserva no tiene una
+	 * convocatoria cargada, intenta cargarla desde la base de datos. Además, se
+	 * asegura de que cada convocado tenga su usuario cargado.
+	 * 
+	 * @param reserva reserva a la que se le quiere cargar la convocatoria
+	 * @return reserva con su convocatoria cargada
+	 */
 	private Reserva obtenerConvocatoria(Reserva reserva) {
-		// Si no hay convocatoria cargada, intentar cargarla desde la base de datos
 		if (reserva.getConvocatoria() == null) {
 			Convocatoria convocatoria = convocatoriaService.findByIdIgnoringValido(reserva.getId());
 			if (convocatoria != null) {
@@ -296,12 +412,9 @@ public class ReservaServiceImpl implements ReservaService {
 			}
 		}
 		
-		// Procesar la convocatoria si existe
 		if (reserva.getConvocatoria() != null && reserva.getConvocatoria().getConvocados() != null) {
-			// Asegurarse de que la lista de convocados no sea nula y convertirla a una lista mutable
 			reserva.getConvocatoria().setConvocados(new ArrayList<>(reserva.getConvocatoria().getConvocados()));
 
-			// Asegurarse de que cada convocado tenga su usuario cargado
 			for (Convocado convocado : reserva.getConvocatoria().getConvocados()) {
 				convocado.setUsuario(convocado.getUsuario());
 			}
